--- a/src/revelation-applet.in
+++ b/src/revelation-applet.in
@@ -25,13 +25,14 @@
 # Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #
 
-import gnome, gnomeapplet, gobject, gtk, os, sys
+import gettext, gnome, gnomeapplet, gobject, gtk, os, sys
 
 if "@pyexecdir@" not in sys.path:
 	sys.path.insert(0, "@pyexecdir@")
 
 from revelation import config, data, datahandler, dialog, entry, io, mman, ui, util
 
+_ = gettext.gettext
 
 
 class RevelationApplet(object):
@@ -43,6 +44,10 @@ class RevelationApplet(object):
 
 		sys.excepthook	= self.__cb_exception
 
+		gettext.bindtextdomain(config.PACKAGE, config.DIR_LOCALE)
+		gettext.bind_textdomain_codeset(config.PACKAGE, "UTF-8")
+		gettext.textdomain(config.PACKAGE)
+
 		mman.mlockall(mman.MCL_FUTURE)
 
 		try:
@@ -52,7 +57,7 @@ class RevelationApplet(object):
 			self.__init_states()
 
 		except config.ConfigError:
-			dialog.Error(None, "Missing configuration data", "The applet could not find its configuration data, please reinstall Revelation.").run()
+			dialog.Error(None, _('Missing configuration data'), _('The applet could not find its configuration data, please reinstall Revelation.')).run()
 			sys.exit(1)
 
 
@@ -153,13 +158,13 @@ class RevelationApplet(object):
 		# set up popup menu
 		self.applet.setup_menu("""
 			<popup name="button3">
-				<menuitem name="file-unlock"	verb="file-unlock"	label="Unlock File"		pixtype="stock" pixname="revelation-unlock" />
-				<menuitem name="file-lock"	verb="file-lock"	label="Lock File"		pixtype="stock" pixname="revelation-lock" />
-				<menuitem name="file-reload"	verb="file-reload"	label="Reload File"		pixtype="stock" pixname="revelation-reload" />
+				<menuitem name="file-unlock"	verb="file-unlock"	label=\"""" + _('Unlock File') + """\"		pixtype="stock" pixname="revelation-unlock" />
+				<menuitem name="file-lock"	verb="file-lock"	label=\"""" + _('Lock File') + """\"		pixtype="stock" pixname="revelation-lock" />
+				<menuitem name="file-reload"	verb="file-reload"	label=\"""" + _('Reload File') + """\"		pixtype="stock" pixname="revelation-reload" />
 				<separator />
-				<menuitem name="revelation"	verb="revelation"	label="Start Revelation"	pixtype="stock" pixname="revelation-revelation" />
-				<menuitem name="prefs"		verb="prefs"		label="Preferences"		pixtype="stock"	pixname="gtk-properties" />
-				<menuitem name="about"		verb="about"		label="About"			pixtype="stock"	pixname="gnome-stock-about" />
+				<menuitem name="revelation"	verb="revelation"	label=\"""" + _('Start Revelation') + """\"	pixtype="stock" pixname="revelation-revelation" />
+				<menuitem name="prefs"		verb="prefs"		label=\"""" + _('Preferences') + """\"		pixtype="stock"	pixname="gtk-properties" />
+				<menuitem name="about"		verb="about"		label=\"""" + _('About') + """\"		pixtype="stock"	pixname="gnome-stock-about" />
 			</popup>
 		""", (
 			( "about",		lambda w,d=None: self.about() ),
@@ -475,8 +480,8 @@ class RevelationApplet(object):
 			return self.file_open(self.config.get("file"))
 
 		d = dialog.Info(
-			None, "File not selected",
-			"You must select a Revelation data file to use - this can be done in the applet preferences.",
+			None, _('File not selected'),
+			_('You must select a Revelation data file to use - this can be done in the applet preferences.'),
 			( ( gtk.STOCK_PREFERENCES, gtk.RESPONSE_ACCEPT ), ( gtk.STOCK_OK, gtk.RESPONSE_OK ) )
 		)
 
@@ -525,7 +530,7 @@ class RevelationApplet(object):
 			util.execute_child(command)
 
 		except ( util.SubstFormatError, config.ConfigError ):
-			dialog.Error(None, "Invalid goto command format", "The goto command for '" + e.typename + "' entries is invalid, please correct this in the preferences.").run()
+			dialog.Error(None, _('Invalid goto command format'), _('The goto command for '" + e.typename + "' entries is invalid, please correct this in the preferences.')).run()
 
 		except util.SubstValueError:
 			self.entry_show(e)
@@ -627,20 +632,20 @@ class RevelationApplet(object):
 			pass
 
 		except datahandler.FormatError:
-			dialog.Error(None, "Invalid file format", "The file '%s' contains invalid data." % file).run()
+			dialog.Error(None, _('Invalid file format'), _('The file \'%s\' contains invalid data.') % file).run()
 
 		except ( datahandler.DataError, entry.EntryTypeError, entry.EntryFieldError ):
-			dialog.Error(None, "Unknown data", "The file '%s' contains unknown data. It may have been created by a more recent version of Revelation.." % file).run()
+			dialog.Error(None, _('Unknown data'), _('The file \'%s\' contains unknown data. It may have been created by a more recent version of Revelation.') % file).run()
 
 		except datahandler.PasswordError:
-			dialog.Error(None, "Incorrect password", "You entered an incorrect password for the file '%s', please try again." % file).run()
+			dialog.Error(None, _('Incorrect password'), _('You entered an incorrect password for the file \'%s\', please try again.') % file).run()
 			self.file_open(file, None)
 
 		except datahandler.VersionError:
-			dialog.Error(None, "Unknown data version", "The file '%s' has a future version number, please upgrade Revelation to open it." % file).run()
+			dialog.Error(None, _('Unknown data version'), _('The file \'%s\' has a future version number, please upgrade Revelation to open it.') % file).run()
 
 		except IOError:
-			dialog.Error(None, "Unable to open file", "The file '%s' could not be opened. Make sure that the file exists, and that you have permissions to open it." % file).run()
+			dialog.Error(None, _('Unable to open file'), _('The file \'%s\' could not be opened. Make sure that the file exists, and that you have permissions to open it.') % file).run()
 
 		return False
 
@@ -667,8 +672,8 @@ class About(dialog.About):
 	def __init__(self, parent):
 		dialog.About.__init__(self, parent)
 
-		self.set_name("Revelation Account Search")
-		self.set_comments('"%s"\n\nAn applet for searching and browsing a Revelation account database' % config.RELNAME)
+		self.set_name(_('Revelation Account Search'))
+		self.set_comments(_('"%s"\n\nAn applet for searching and browsing a Revelation account database') % config.RELNAME)
 
 
 
@@ -744,12 +749,12 @@ class Preferences(dialog.Utility):
 		self.notebook = ui.Notebook()
 		self.vbox.pack_start(self.notebook)
 
-		self.page_general = self.notebook.create_page("General")
+		self.page_general = self.notebook.create_page(_('General'))
 		self.__init_section_file(self.page_general)
 		self.__init_section_menuaction(self.page_general)
 		self.__init_section_misc(self.page_general)
 
-		self.page_goto = self.notebook.create_page("Goto Commands")
+		self.page_goto = self.notebook.create_page(_('Goto Commands'))
 		self.__init_section_gotocmd(self.page_goto)
 
 		self.connect("response", lambda w,d: self.destroy())
@@ -758,42 +763,42 @@ class Preferences(dialog.Utility):
 	def __init_section_file(self, page):
 		"Sets up a file section in a page"
 
-		self.section_file = page.add_section("File Handling")
+		self.section_file = page.add_section(_('File Handling'))
 
 		# entry for file
-		self.button_file = ui.FileButton("Select File to Use")
+		self.button_file = ui.FileButton(_('Select File to Use'))
 		ui.config_bind(self.config, "file", self.button_file)
 
 		eventbox = ui.EventBox(self.button_file)
-		self.tooltips.set_tip(eventbox, "The data file to search for accounts in")
-		self.section_file.append_widget("File to use", eventbox)
+		self.tooltips.set_tip(eventbox, _('The data file to search for accounts in'))
+		self.section_file.append_widget(_('File to use'), eventbox)
 
 		# check-button for autolock
-		self.check_autolock = ui.CheckButton("Lock file when inactive for")
+		self.check_autolock = ui.CheckButton(_('Lock file when inactive for'))
 		ui.config_bind(self.config, "autolock", self.check_autolock)
 		self.check_autolock.connect("toggled", lambda w: self.spin_autolock_timeout.set_sensitive(w.get_active()))
-		self.tooltips.set_tip(self.check_autolock, "Automatically lock the file after a period of inactivity")
+		self.tooltips.set_tip(self.check_autolock, _('Automatically lock the file after a period of inactivity'))
 
 		# spin-entry for autolock-timeout
 		self.spin_autolock_timeout = ui.SpinEntry()
 		self.spin_autolock_timeout.set_range(1, 120)
 		self.spin_autolock_timeout.set_sensitive(self.check_autolock.get_active())
 		ui.config_bind(self.config, "autolock_timeout", self.spin_autolock_timeout)
-		self.tooltips.set_tip(self.spin_autolock_timeout, "The period of inactivity before locking the file, in minutes")
+		self.tooltips.set_tip(self.spin_autolock_timeout, _('The period of inactivity before locking the file, in minutes'))
 
 		# container for autolock-widgets
 		hbox = ui.HBox()
 		hbox.set_spacing(3)
 		hbox.pack_start(self.check_autolock)
 		hbox.pack_start(self.spin_autolock_timeout)
-		hbox.pack_start(ui.Label("minutes"))
+		hbox.pack_start(ui.Label(_('minutes')))
 		self.section_file.append_widget(None, hbox)
 
 
 	def __init_section_gotocmd(self, page):
 		"Sets up the goto command section"
 
-		self.section_goto = page.add_section("Goto Commands")
+		self.section_goto = page.add_section(_('Goto Commands'))
 
 		for entrytype in entry.ENTRYLIST:
 			if entrytype == entry.FolderEntry:
@@ -804,15 +809,15 @@ class Preferences(dialog.Utility):
 			widget = ui.Entry()
 			ui.config_bind(self.config, "/apps/revelation/launcher/%s" % e.id, widget)
 
-			tooltip = "Goto command for %s accounts. The following expansion variables can be used:\n\n" % e.typename
+			tooltip = _('Goto command for %s accounts. The following expansion variables can be used:\n\n') % e.typename
 
 			for field in e.fields:
 				tooltip += "%%%s: %s\n" % ( field.symbol, field.name )
 
 			tooltip += "\n"
-			tooltip += "%%: a % sign\n"
-			tooltip += "%?x: optional expansion variable\n"
-			tooltip += "%(...%): optional substring expansion"
+			tooltip += _('%%: a % sign') + "\n"
+			tooltip += _('%?x: optional expansion variable') + "\n"
+			tooltip += _('%(...%): optional substring expansion')
 
 			self.tooltips.set_tip(widget, tooltip)
 			self.section_goto.append_widget(e.typename, widget)
@@ -821,54 +826,54 @@ class Preferences(dialog.Utility):
 	def __init_section_menuaction(self, page):
 		"Sets up a menuaction section in a page"
 
-		self.section_menuaction = page.add_section("Menu Action")
+		self.section_menuaction = page.add_section(_('Menu Action'))
 
 		# radio-button for show
-		self.radio_show = ui.RadioButton(None, "Display account info")
+		self.radio_show = ui.RadioButton(None, _('Display account info'))
 		ui.config_bind(self.config, "menuaction", self.radio_show, "show")
 
-		self.tooltips.set_tip(self.radio_show, "Display the account information")
+		self.tooltips.set_tip(self.radio_show, _('Display the account information'))
 		self.section_menuaction.append_widget(None, self.radio_show)
 
 		# radio-button for goto
-		self.radio_goto = ui.RadioButton(self.radio_show, "Go to account, if possible")
+		self.radio_goto = ui.RadioButton(self.radio_show, _('Go to account, if possible'))
 		ui.config_bind(self.config, "menuaction", self.radio_goto, "goto")
 
-		self.tooltips.set_tip(self.radio_goto, "Open the account in an external application if possible, otherwise display it")
+		self.tooltips.set_tip(self.radio_goto, _('Open the account in an external application if possible, otherwise display it'))
 		self.section_menuaction.append_widget(None, self.radio_goto)
 
 		# radio-button for copy username/password
-		self.radio_copy = ui.RadioButton(self.radio_show, "Copy password to clipboard")
+		self.radio_copy = ui.RadioButton(self.radio_show, _('Copy password to clipboard'))
 		ui.config_bind(self.config, "menuaction", self.radio_copy, "copy")
 
-		self.tooltips.set_tip(self.radio_copy, "Copy the account password to the clipboard")
+		self.tooltips.set_tip(self.radio_copy, _('Copy the account password to the clipboard'))
 		self.section_menuaction.append_widget(None, self.radio_copy)
 
 
 	def __init_section_misc(self, page):
 		"Sets up the misc section"
 
-		self.section_misc = page.add_section("Miscellaneous")
+		self.section_misc = page.add_section(_('Miscellaneous'))
 
 		# show searchentry checkbutton
-		self.check_show_searchentry = ui.CheckButton("Show search entry")
+		self.check_show_searchentry = ui.CheckButton(_('Show search entry'))
 		ui.config_bind(self.config, "show_searchentry", self.check_show_searchentry)
 
-		self.tooltips.set_tip(self.check_show_searchentry, "Display an entry box in the applet for searching")
+		self.tooltips.set_tip(self.check_show_searchentry, _('Display an entry box in the applet for searching'))
 		self.section_misc.append_widget(None, self.check_show_searchentry)
 
 		# show passwords checkbutton
-		self.check_show_passwords = ui.CheckButton("Show passwords and other secrets")
+		self.check_show_passwords = ui.CheckButton(_('Show passwords and other secrets'))
 		ui.config_bind(self.config, "show_passwords", self.check_show_passwords)
 
-		self.tooltips.set_tip(self.check_show_passwords, "Display passwords and other secrets, such as PIN codes (otherwise, hide with ******)")
+		self.tooltips.set_tip(self.check_show_passwords, _('Display passwords and other secrets, such as PIN codes (otherwise, hide with ******)'))
 		self.section_misc.append_widget(None, self.check_show_passwords)
 
 		# check-button for username
-		self.check_chain_username = ui.CheckButton("Also copy username when copying password")
+		self.check_chain_username = ui.CheckButton(_('Also copy username when copying password'))
 		ui.config_bind(self.config, "chain_username", self.check_chain_username)
 
-		self.tooltips.set_tip(self.check_chain_username, "When the password is copied to clipboard, put the username before the password as a clipboard \"chain\"")
+		self.tooltips.set_tip(self.check_chain_username, _('When the password is copied to clipboard, put the username before the password as a clipboard "chain"'))
 		self.section_misc.append_widget(None, self.check_chain_username)
 
 
