updated POTFILES list

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,1 +1,8 @@
 src/revelation.in
+src/revelation-applet.in
+src/lib/config.py.in
+src/lib/dialog.py
+src/lib/entry.py
+src/lib/ui.py
+src/lib/util.py
+src/lib/datahandler/xhtml.py
