use ItemFactory.get_pixbuf() in applet

--- a/src/revelation-applet.in
+++ b/src/revelation-applet.in
@@ -147,7 +147,7 @@ class RevelationApplet(object):
 		self.applet.set_flags(gnomeapplet.EXPAND_MINOR)
 
 		# set up window icons
-		pixbufs = [ self.items.load_icon("revelation", size) for size in ( 48, 32, 24, 16) ]
+		pixbufs = [ self.items.get_pixbuf("revelation", size) for size in ( 48, 32, 24, 16) ]
 		pixbufs = [ pixbuf for pixbuf in pixbufs if pixbuf != None ]
 
 		if len(pixbufs) > 0:
