include intltool-commands in dist tarball

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,6 +7,9 @@
 
 AUTOMAKE_OPTIONS	= dist-bzip2 no-dist-gzip
 SUBDIRS			= data po src
+EXTRA_DIST		= intltool-extract.in \
+				intltool-merge.in \
+				intltool-update.in
 
 dist-hook:
 	svn2cl.sh\
