--- a/src/revelation-applet.in
+++ b/src/revelation-applet.in
@@ -1,7 +1,7 @@
 #!/usr/bin/env python
 
 #
-# Revelation 0.4.8- a password manager for GNOME 2
+# Revelation - a password manager for GNOME 2
 # http://oss.codepoet.no/revelation/
 # $Id$
 #
