generate revelation.desktop with proper version from autoconf

--- a/data/mime/Makefile.am
+++ b/data/mime/Makefile.am
@@ -6,10 +6,19 @@
 #
 
 desktopdir		= $(datadir)/applications
-dist_desktop_DATA	= revelation.desktop
+nodist_desktop_DATA	= revelation.desktop
 
 mimedir			= $(datadir)/mime/packages
 dist_mime_DATA		= revelation.xml
+
+CLEANFILES		= revelation.desktop
+EXTRA_DIST		= revelation.desktop.in
+
+
+revelation.desktop: revelation.desktop.in
+	sed \
+		-e "s|\@VERSION\@|$(VERSION)|" \
+		revelation.desktop.in > revelation.desktop
 
 
 install-data-hook:
