--- a/data/mime/revelation.desktop.in
+++ b/data/mime/revelation.desktop.in
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Version=0.4.8
+Version=@VERSION@
 Encoding=UTF-8
 Name=Revelation Password Manager
 Name[fr]=Gestionnaire de mots de passe Revelation
